<resources>
    <string name="app_name">Review Film</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="detail">detail</string>
    <string name="overview">Overview</string>
    <string name="trailer">trailer</string>
    <string name="back">back</string>
    <string name="watch">Watch</string>
    <string name="now_playing">Now playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="favourites">Favourites</string>
    <string name="max_rate">%.1f/10</string>
    <string name="votes">%d votes</string>
    <string name="sub">%s-sub</string>
    <string name="favourite">Favourite</string>
    <string name="unfavourite">UnFavourite</string>
    <string name="msg_video_deleted">VIDEO LINK DELETED</string>
</resources>